# fatfs-mod

./: CMakeLists.txt
source/: diskio.h  ff.c  ff.h  ffconf.h
test/: CMakeLists.txt  arm9_main.c  console.c
